compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__consts__record_constructor.snap
---
source: compiler-core/src/erlang/tests/consts.rs
expression: "\npub type X {\n  X(Int)\n}\n\npub const z = X\n\npub fn main() {\n  z\n}"
---
----- SOURCE CODE

pub type X {
  X(Int)
}

pub const z = X

pub fn main() {
  z
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0, z/0]).
-export_type([x/0]).

-type x() :: {x, integer()}.

-spec z() -> fun((integer()) -> x()).
z() ->
    fun(_value) ->
        {x, _value}
    end.

-spec main() -> fun((integer()) -> x()).
main() ->
    fun(_value) ->
        {x, _value}
    end.
