compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__consts__string_constant_from_another_module_is_concatenated_correctly.snap
---
source: compiler-core/src/erlang/tests/consts.rs
expression: "\nimport mod\n\npub fn go(x) {\n  x <> \"-\" <> mod.wibble\n}\n"
---
----- SOURCE CODE

import mod

pub fn go(x) {
  x <> "-" <> mod.wibble
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([go/1]).

-spec go(binary()) -> binary().
go(X) ->
    <<<<X/binary, "-"/utf8>>/binary, (mod:wibble())/binary>>.
