compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__consts__use_private_in_list.snap
---
source: compiler-core/src/erlang/tests/consts.rs
expression: "\n          fn identity(a) {\n            a\n          }\n\n          pub const funcs = [identity]\n        "
---
----- SOURCE CODE

          fn identity(a) {
            a
          }

          pub const funcs = [identity]
        

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([funcs/0]).

-spec funcs() -> list(fun((L) -> L)).
funcs() ->
    [fun identity/1].

-spec identity(I) -> I.
identity(A) ->
    A.
