compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__consts__use_qualified_pub_const_equal_to_record_with_private_function_field.snap
---
source: compiler-core/src/erlang/tests/consts.rs
expression: "\n              fn identity(a) {\n                a\n              }\n\n              pub type Mapper(b) {\n                Mapper(fn(b) -> b)\n              }\n\n              pub const id_mapper = Mapper(identity)\n        "
---
----- SOURCE CODE

              fn identity(a) {
                a
              }

              pub type Mapper(b) {
                Mapper(fn(b) -> b)
              }

              pub const id_mapper = Mapper(identity)
        

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([id_mapper/0]).
-export_type([mapper/1]).

-type mapper(I) :: {mapper, fun((I) -> I)}.

-spec id_mapper() -> mapper(any()).
id_mapper() ->
    {mapper, fun identity/1}.

-spec identity(J) -> J.
identity(A) ->
    A.
